[package]
name = "boltcli"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2"
curl = { version = "0.4.49", features = [ "rustls" ] }
serde = { version = "1", features = [ "derive" ] }
toml = "0.9.8"
rustls = "0.23.34"
serde_json = "1.0.145"
termimad = "0.20"
termion = "2.0"
shellexpand = "3.1.1"
spinoff = "0.8.0"
